--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+
 }
 
 .text-left {
@@ -38,7 +39,9 @@ a {
 }
 
 .mid-content {
-    padding-left: 100px;
+
+    max-width: 1400px;
+    margin: auto;
 
 
 }
@@ -53,6 +56,7 @@ a {
     height: 50px;
     position: fixed;
     width: 100%;
+    margin-left: 60px;
     top: 0;
     left: 0;
     z-index: 60;
@@ -176,13 +180,14 @@ a {
     background-color: #808080;
 }
 
-.middle-3 h1 {
+.middle-3 h1{
     color: aliceblue;
     text-align: center;
     padding-top: 30px;
     text-decoration: underline 2px;
 
 }
+
 
 .middle-3 h2 {
     color: aliceblue;
@@ -200,88 +205,143 @@ a {
 
 }
 
-.boxes {
-    margin-top: 50px;
+/* BOX_LIST_SECTION */
 
-    background-color: aliceblue;
-    margin-bottom: 50px;
-    margin-left: 3%;
+.list-item{
+    float: left;
+    width: 33%;
 }
+
+.list-type{
+    display: inline-block;
+    background-color: #e4e6e8;
+    padding: 20px 100px 20px 20px;
+    margin-left:150px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 50px 0 rgba(34, 32, 32, 0.1);
+   }
+
+.icon-sec{
+    float: left;
+    width:20%;
+    height:100px;
+    color: #00bc9c;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.para h3{
+    float: left;
+    width:80%;
+    padding-bottom:10px;
+}
+
+
 
 /* <!--MIDDLE---4---PART--STARTED>*/
 
 .middle-4 {
-    height:900px;
+    height: 900px;
     width: 100%;
     background-color: #87a471;
 }
 
-.middle-4 h1{
+.middle-4 h1 {
     text-align: center;
-    padding:100px 0px 10px 0px;
+    padding: 100px 0px 10px 0px;
     color: #e4e6e8;
     font-size: 25px;
 }
-.middle-4 p{
+
+.middle-4 p {
     text-align: center;
-    padding:0px 0px 50px 0px;
+    padding: 0px 0px 50px 0px;
     color: #e4e6e8;
 }
 
-.part-1{
-margin-left:-45px;
-   
+.part-1 {
+    margin-left:150px;
 }
 
-.img-1 img{
+/*Image-1-part*/
+
+.img-1 img {
     height: 300px;
-    width:80%;
-    margin-right:200px;
-    margin-bottom:30px;
-} 
+    width:550px;
+}
+
 .img-1{
-  float: left;
-  width: 50%;
+    float:left;
+    width:40%;
+    border: 1px solid white;
+    text-align: center;
+}
 
-} 
-.img-2 img{
+.img-1 p{
+    color:#5d7880;
+    padding-top: 20px;
+}
+
+.img-1 h4{
+    color:#fbfbfb;
+    margin-top:-40px;
+    margin-bottom: 10px;
+}
+
+/*Image-2-part*/
+
+.img-2 img {
     height: 300px;
-    width:70%;
-    margin-right:200px;
-    margin-bottom:30px;
-   
-    
-} 
-.img-2{
-  float: left; 
-  width: 50%;
-} 
-
-.img-3{
-    float: left;
-    width: 25%;
-    margin-left: -60px;
+    width:550px;
+    padding-right:0px;
 }
 
-.img-4{
-    float: left;
-    width: 25%;
+.img-2 {
+    float:left;
+    width:40%;
+    border: 1px solid white;  
+    margin-left:30px;
+    text-align: center;
 }
 
-.img-5{
-    float: left;
-    width: 25%;
+.img-2 p{
+    color:#5d7880;
+    padding-top: 20px;
 }
 
-.img-6{
-    float: left;
-    width: 25%;
+.img-2 h4{
+    color:#fbfbfb;
+    margin-top:-40px;
+    margin-bottom: 10px;
 }
 
+.img-3 {
+    float: left;
+    width: 23%;
+    margin-left:2%;
+    margin-top:30px;
+}
 
+.img-4 {
+    float: left;
+    width: 23%;
+    margin-top:30px;
+}
 
+.img-5 {
+    float: left;
+    width: 23%;
+    margin-top:30px;
+}
 
-/* <!--MIDDLE---5---PART--STARTED>*/
+.img-6 {
+    float: left;
+    width: 23%;
+    margin-top:30px;
+}
+
+/*MIDDLE---5---PART--STARTED*/
 
 .middle-5 {
     height: 300px;
@@ -296,17 +356,18 @@ margin-left:-45px;
     text-decoration: underline 2px;
 }
 
-.img-section{
-    width: 33%;
+.img-section {
+    width: 30%;
     height: 100px;
-    
+    margin-left: 3%;
 }
 
-.icon{
-   
+.icon span i{
+    padding:5px 10px 0px 10px;
+    color: #e4e6e8;
 }
 
-/* <!--MIDDLE---6---PART--STARTED>*/
+/*MIDDLE---6---PART--STARTED*/
 
 .middle-6 {
     height: 300px;
@@ -339,10 +400,7 @@ margin-left:-45px;
     font-size: 15px;
 }
 
-
-
-/*FOOTER---PART*/
-
+/*FOOTER---PART--Started*/
 
 .footer {
     height: 100px;
